attempt to fix form overflow mobile

--- a/src/styles/Form.module.scss
+++ b/src/styles/Form.module.scss
@@ -17,22 +17,20 @@
 		.inputContainer {
 			display: flex;
 			flex-direction: column;
-			flex-wrap: wrap;
 			gap: 10px;
 			height: fit-content;
-			font-family: Arial, Helvetica, sans-serif;
-			font-weight: 300;
-			font-size: 1rem;
 
 			.inputLabel {
 				margin-top: 15px;
 				font-family: SF-Pro-Display;
 				font-weight: 300;
-				font-size: 1rem;
+				font-size: 0.9rem;
 			}
 
 			.inputField {
-	
+				font-family: SF-Compact-Text;
+				font-weight: 300;
+				font-size: 0.9rem;
 				background-color: vars.$color-grey-transparent;
 				outline: none;
 				border: none;
@@ -43,6 +41,9 @@
 			}
 
 			.inputMessage {
+				font-family: SF-Compact-Text;
+				font-weight: 300;
+				font-size: 0.9rem;
 				resize: vertical;
 				max-height: 40vh;
 				min-height: 100px;
@@ -50,8 +51,12 @@
 			}
 
 			.errorMsg {
+				font-family: SF-Compact-Text;
+				font-weight: 300;
+				font-size: 0.8rem;
 				color: vars.$color-red;
 				margin: 0;
+				padding: 0;
 			}
 		}
 	}
